--- a/docs/android/TOC.yml
+++ b/docs/android/TOC.yml
@@ -393,6 +393,8 @@
           href: ~/essentials/accelerometer.md?context=xamarin/android
         - name: 应用信息
           href: ~/essentials/app-information.md?context=xamarin/android
+        - name: 应用主题
+          href: ~/essentials/app-theme.md?context=xamarin/android
         - name: 气压计
           href: ~/essentials/barometer.md?context=xamarin/android
         - name: 电池
@@ -435,6 +437,8 @@
           href: ~/essentials/open-browser.md?context=xamarin/android
         - name: 方向传感器
           href: ~/essentials/orientation-sensor.md?context=xamarin/android
+        - name: 权限
+          href: ~/essentials/permissions.md?context=xamarin/android
         - name: 电话拨号程序
           href: ~/essentials/phone-dialer.md?context=xamarin/android
         - name: 平台扩展（Size、Rect、Point）
