--- a/docs/whats-new/TOC.yml
+++ b/docs/whats-new/TOC.yml
@@ -2,6 +2,11 @@
   href: index.yml
   expanded: true
   items:
+    - name: 2020
+      expanded: true
+      items:
+        - name: February
+          href: 2020-02.md
     - name: 2019
       expanded: true
       items:
